# auberge

./: .dprint.jsonc  .gitignore  CHANGELOG.md  CONTEXT.md  Cargo.toml  MIGRATION.md  README.md  ansible.cfg  config.example.toml  develop.md  hk.pkl  inventory.yml  mise.toml  plan-bichon.md  plan-headscale.md  plan-ladder.md  plan.md  release-plz.toml  requirements.yml  setup
.config/mise/: config.toml
.github/scripts/: check-stdout-discipline.sh
.github/workflows/: build-binaries.yml  build-booklore.yml  build-grimmory.yml  main.yml  master.yml  release.yml  semantic-pr.yml
.mise/: config.toml
.mise/tasks/: ansible-bootstrap  ansible-run  generate-ssh-keys  select-host  select-playbook  sync-music
adguard-home/: AdGuardHome.yaml  Dockerfile
ansible/: .ansible-lint  CLAUDE.md  ansible.cfg  inventory.yml  keys.yml  playbook.yml  requirements.yml  vibecoder-playbook.yml
ansible/handlers/: main.yml
ansible/inventory/: dns.yml
ansible/playbooks/: CLAUDE.md  apps.meta.yml  apps.yml  auberge.yml  baikal.meta.yml  bichon.meta.yml  blocky.meta.yml  bootstrap.meta.yml  bootstrap.yml  calibre.meta.yml  calibre.yml  cockpit.meta.yml  colporteur.meta.yml  freshrss.meta.yml  gokapi.meta.yml  gokapi.yml  grimmory.meta.yml  hardening.meta.yml  hardening.yml  headscale.meta.yml  hermes.meta.yml  hermes.yml  infrastructure.meta.yml  infrastructure.yml  navidrome.meta.yml  openclaw-full.yml  openclaw.yml  paperless.meta.yml  remove-radicale.yml  selfhosted.yml  site.yml  vibecoder.meta.yml  vibecoder.yml  webdav.meta.yml  yourls.meta.yml
ansible/tasks/: 00_apt.yml  00_system_update.yml  01_user.yml  02_sshd.yml  03_bash.yml  04_ufw.yml  05_caddy.yml  06_radicale.yml  07_webdav.yml  08_calibre.yml
ansible/templates/: bash_aliases  sshd_config.j2  webdav.sripwoud.xyz.caddyfile.j2
caddy/: Caddyfile
calibre/: calibre.nginx  calibre.service
docs/: CNAME  README.md  _sidebar.md  backup.md  index.html  openclaw.md  ssh.md
examples/: baikal-busy-blockers.gs  bichon-expunge.sh
inventory/: dns.yml
meta/: adr.md  roadmap.md
miniflux/: deploy  fly.toml  mise.toml
playbooks/: bootstrap.yml  selfhosted.yml  vibecoder.yml
radicale/: radicale.nginx  radicale.service
scripts/: check-stdout-discipline.sh  sync-music.sh
src/: ansible_assets.rs  commands.rs  config.rs  hosts.rs  key_registry.rs  main.rs  models.rs  output.rs  playbook_meta.rs  playbooks.rs  prompt.rs  secrets.rs  selector.rs  services.rs  signal.rs  ssh_config.rs  ssh_session.rs  user_config.rs
wireguard/: install.sh  main.sh  setup_ssh_ufw_wg.sh
(+408 files in other folders)
