[package]
name = "auberge"
version = "0.1.1"
edition = "2024"
description = "CLI tool for managing self-hosted infrastructure with Ansible"
license = "AGPL-3.0-or-later"
repository = "https://github.com/sripwoud/auberge"

[dependencies]
ansible-rs = "1.1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
toml = "0.8"
eyre = "0.6"
color-eyre = "0.6"
dialoguer = "0.11"
skim = "0.10"
dirs = "6"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
cloudflare = "0.14"
minijinja = "2.14.0"

[dev-dependencies]
tempfile = "3"
