[package]
name = "auberge"
version = "0.12.2"
edition = "2024"
description = "CLI tool for managing self-hosted infrastructure with Ansible"
license = "AGPL-3.0-or-later"
repository = "https://github.com/sripwoud/auberge"

[dependencies]
ansible-rs = "1.1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
toml = "0.8"
eyre = "0.6"
color-eyre = "0.6"
dialoguer = "0.11"
skim = "0.10"
dirs = "6"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
cloudflare = "0.14"
minijinja = "2.14.0"
regex = "1"
tempfile = "3"
include_dir = "0.7"
chrono = { version = "0.4.43", features = ["serde"] }
shellexpand = "3.1"
tabled = "0.16"
indicatif = "0.17"
openssl = { version = "0.10", features = ["vendored"] }
shell-escape = "0.1.5"
ctrlc = "3.5.2"
hickory-resolver = { version = "0.26", features = ["tokio"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
wiremock = "0.6"
